--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,16 +1,6 @@
-<html>
+<%- include('../partials/header') %>
 
-<head>
-  <title>Title</title>
-  <!-- Google Icon Fonts used by Materialize -->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Materialize CSS Framework -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="stylesheets/style.css" />
-  <!-- JavaScript for Materialize -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
+<% if (user) {%>
 <div class="navcontainer">
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -25,10 +15,11 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/comments">Comments</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+          <%} else {%>
+          </li>
+          <h1 >Login with Google to start!<h1>
+
+              <%}%>
       </ul>
       <form class="form-inline my-2 my-lg-0">
           
@@ -43,5 +34,4 @@
 </div>
 
 
-
-</html>
+<%- include('../partials/footer') %>
