--- a/views/blogs/new.ejs
+++ b/views/blogs/new.ejs
@@ -2,12 +2,12 @@
 
 
 
-<form action="">
+<form action="/new" method="POST">
     <div class="form-group">
-        <input class ="form-control" placeholder="Title">
-        <textarea class="form-control" id="exampleFormControlTextarea1"  rows="20" placeholder="Blog about it"></textarea>
+        <input class ="form-control" placeholder="Title" name="title">
+        <textarea class="form-control" name="text" id="exampleFormControlTextarea1"  rows="20" placeholder="Blog about it"></textarea>
     </div>
-    <button type="submit" class="btn btn-secondary btn-lg bg-dark  ">Submit</button>
+    <button type="submit" class="btn btn-secondary btn-lg bg-dark ">Submit</button>
 </form>
       
 
