--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -1,13 +1,18 @@
 <%- include('../partials/header') %>
 
-<% blog.forEach(function(b) { %>
-    <table>
-      <thead> <%= b.title %> </thead>
+<% blogs.forEach(function(b) { %>
+    <table><br><br>
+      <thead > <h1><%= b.title %></h1> </thead>
       <tr>
-        <td> <%= b.text %> </td>
-        <td></td>
-        <%}) %>
-      </tr>
-    </table>
+        <td class="author"> <%= b.addedBy %> </td>
+        <td ><form action="/blogs/<%= b._id %>/delete" method="POST">
+            <input class="author" type="submit" value="Delete">
+            </form></td>
+            <form action="/blogs/<%= b._id %>/update" method="PUT">
+            <input class="author" type="submit" value="Edit">
+            </form>
+    </tr>
+   </table>
+<%}) %>
 
 <%- include('../partials/footer') %>
