--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,8 +13,11 @@
 </head>
 
 <nav class="navbar fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand">Blogopocalypes</a>
-   
+    <a  href="/users"  class="navbar-brand">Blogopocalypes</a>
+    
+    
+    <a class="nav-link" href="/new">Post About It <span class="sr-only">(current)</span></a>
+
 </nav><br>
 
 
