--- a/views/blogs/view.ejs
+++ b/views/blogs/view.ejs
@@ -4,16 +4,20 @@
 <p><%= blog.text %></p><br><br>
 
 
+<% blog.comments.forEach(function(c) { %>
 
-
-
-
-<form action="/blogs/<%= blog._id%>/comments" method="POST">
-    <div class="form-group">
-        <textarea class="form-control" name="content" id="exampleFormControlTextarea1"  rows="10" placeholder="Comment about it"></textarea>
-    </div>
-    <button type="submit" class="btn btn-secondary btn-lg bg-dark ">Submit</button>
-</form>
-
+    <p><%= c.content %></p>
+    
+    
+    
+    
+    <%});%>
+    <form action="/blogs/<%= blog._id%>/content" method="POST">
+        <div class="form-group">
+            <textarea class="form-control" name="content" id="exampleFormControlTextarea1"  rows="10" placeholder="Comment about it"></textarea>
+        </div>
+        <button type="submit" class="btn btn-secondary btn-lg bg-dark ">Submit</button>
+    </form>
+    
 
 <%- include('../partials/footer') %>
