--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -5,16 +5,21 @@
       <thead > <h1><%= b.title %></h1> </thead>
       <tr>
             <td class="author"> <%= b.addedBy %> </td>
-            <td ><form action="/blogs/<%= b._id %>/delete" method="POST">
-                <input class="author" type="submit" value="Delete"></form>
-             </td>
-                <form action="/blogs/<%= b._id %>/update" method="PUT">
-                    <input class="author" type="submit" value="Edit">
-                </form>
+            <% if (b.userId === b.userId) { %>
+            <td >
+                    <form action="/blogs/<%= b._id %>/delete" method="POST">
+                        <input class="author" type="submit" value="Delete"></form>
+                    </td>
+                    <% } %>
+                <form action="/blogs/<%= b._id %>/update" method="POST">
+                    <input class="author" type="text" name='edit' placeholder="Edit Post">
+                    <input type="text" name="editTitle" placeholder="Edit title">
+                    <button>Edit</button>
+            </form>
             <tb><a href="/blogs/<%= b._id %>">View Post</a></tb>
-
-      </tr>
-   </table>
-<%}) %>
+        </tr>
+        
+        <%}) %>
+    </table>
 
 <%- include('../partials/footer') %>
