--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,3 +15,13 @@ a {
 #head {
   font-size: 10px;
 }
+
+.container {
+  border: 0.5px solid black;
+  text-align: center;
+}
+
+.comments  {
+border-bottom: 0.5px dotted lightgray;
+text-align: left;
+}
