--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar fixed-bottom navbar-dark bg-dark">
+<nav id ="nav" class="navbar fixed-bottom navbar-dark bg-dark">
         <a class="navbar-brand"></a>
 </nav><br>
 </html>
