--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 
 <nav class="navbar fixed-top navbar-dark bg-dark">
     <a  href="/users"  class="navbar-brand">Blogopocalypes</a>
-    <a class="" href="/show">home <span class="sr-only">(current)</span></a>
+    <a class="" href="/show">Back To The Blogopocalypes<span class="sr-only">(current)</span></a>
     
     <a class="nav-link" href="/new">Post About It <span class="sr-only">(current)</span></a>
 
