--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: whitesmoke;
 }
 
 a {
@@ -12,16 +13,60 @@ a {
 
 }
 
-#head {
-  font-size: 10px;
+.viewLink {
+  padding: 10px;
+  color: red;
+  border: 2px solid red;
+  border-radius: 100px;
 }
 
-.container {
-  border: 0.5px solid black;
+.head {
+  font-size: 50px;
   text-align: center;
+}
+
+.viewText {
+  border: 0.5px solid black;
+  padding: 10px;
+  border-radius: 20px;
+  margin: 1px 300px;
+
+}
+
+.viewHead {
+  border-right: 0.5px solid black;
+  border-left: 0.5px solid black;
+  border-radius: 100px;
+  text-align: center;
+  padding: -30px 0 0;
+  margin: 0 400px;
+  
+}
+
+.commentWrapper {
+  border: 0.5px solid black;
+  padding: 10px;
+  margin: 1px 40px;
 }
 
 .comments  {
 border-bottom: 0.5px dotted lightgray;
 text-align: left;
+}
+
+.contentWrapper {
+  padding: 4px 0 4px; 
+}
+
+.timestamps {
+  font-size: 8px;
+  text-align: right;
+  margin: 0;
+  color: blue;
+}
+
+.commentWrapper {
+  margin: 10px 0 -5px;
+  
+  padding: 5px;
 }
