--- a/views/blogs/new.ejs
+++ b/views/blogs/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-
+<body class='imgBack'>
 
 <form action="/new" method="POST">
     <div class="form-group">
@@ -11,7 +11,7 @@
 </form>
       
 
-
+</body>
 
 
 
