--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -3,35 +3,32 @@
 <head>
   <title>Blogopocalypes</title>
   <!-- Google Icon Fonts used by Materialize -->
+  <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Frijole&display=swap" rel="stylesheet">
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Materialize CSS Framework -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="stylesheets/style.css" />
   <!-- JavaScript for Materialize -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <nav class="navbar fixed-top navbar-dark bg-dark">
-    <a href="/users" class="navbar-brand">Blogopocalypes</a>
-    <% if (user) {%>
-    <a class="nav-link" href="/new">Post About It <span class="sr-only">(current)</span></a>
-    <form class="form-inline my-2 my-lg-0">
-      
-      
-        
-        <a href="/logout">Log Out</a>
-        <% } else { %> 
-          <a href="/auth/google">Login with Google</a>
-         </button> 
-         <% } %>
-        </form>
-        
-      </nav><br>
+  <a href="/users" class="navbar-brand" id='logo'>Blogopocalypes</a>
+  <% if (user) {%>
+  <a class="nav-link" href="/new">Post About It <span class="sr-only">(current)</span></a>
+  <form class="form-inline my-2 my-lg-0">
+    <a href="/logout">Log Out</a>
+    <% } else { %>
+    <a href="/auth/google">Login with Google</a>
+    </button>
+    <% } %>
+  </form>
+</nav><br>
+
+<body class='imgView'>
 
 
 
-
-
-
-
+</body>
 <%- include('../partials/footer') %>
