--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- JavaScript for Materialize -->
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
 <nav class="navbar fixed-top navbar-dark bg-dark">
-    <a  href="/users"  class="navbar-brand">Blogopocalypes</a>
+    <a  href="/users"  class="navbar-brand" id='logo' >Blogopocalypes</a>
     <a class="" href="/show">Back To The Blogopocalypes<span class="sr-only">(current)</span></a>
     
     <a class="nav-link" href="/new">Post About It <span class="sr-only">(current)</span></a>
